--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
 	"dependencies": {
 		"classnames": "^2.5.1",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.23.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.3.1",
 		"@types/react-dom": "^18.3.0",
-		"@vitejs/plugin-react-swc": "^3.5.0",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@vitejs/plugin-react-swc": "^3.5.0",
 		"eslint": "^8.57.0",
 		"eslint-plugin-react": "^7.34.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
